--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <!-- Photo -->
     <div class="container px-5">
         <div id="avatar">
-            <img class="shadow" src="static/assets/img/photo.png">
+            <img class="shadow" src="https://tse4-mm.cn.bing.net/th/id/OIP-C.0X2ZKlrDuGldTOaUGwj5-QAAAA?w=229&h=196&c=7&r=0&o=5&pid=1.7">
         </div>
     </div>
     <!-- Photo -->
