--- a/hobby.html
+++ b/hobby.html
@@ -3,7 +3,7 @@
     </head>
     <title>兴趣爱好</title>
     <style>
-    body {
+    body { <section class="top-section" style="background-image: url(‘https://tse4-mm.cn.bing.net/th/id/OIP-C.fWw_vx8UzTRS6ysvcoCz4gHaDy?w=349&h=178&c=7&r=0&o=5&pid=1.7');">
         font-family: Arial, sans-serif;
         margin: 0;
         padding: 0;
