--- a/javascript.html
+++ b/javascript.html
@@ -51,8 +51,8 @@
         <ul>
             <li><a href="index.html">主页</a></li>
             <li><a href="hobby.html">兴趣爱好</a></li>
-            <li><a href="table.html">计算机网络课表</a></li>
-            <li><a href="form.html">调查表</a></li>
+            <li><a href="table.html">课表</a></li>
+            <li><a href="form.html">申请表</a></li>
             <li><a href="javascript.html">JavaScript 演示</a></li>
         </ul>
     </nav>
