--- a/hobby.html
+++ b/hobby.html
@@ -95,7 +95,7 @@
             <li><a href="hobby.html">兴趣爱好</a></li>
             <li><a href="table.html">课表</a></li>
             <li><a href="form.html">申请表</a></li>
-            <li><a href="javascript_demo.html">JavaScript 演示</a></li>
+            <li><a href="javascript.html">JavaScript 演示</a></li>
         </ul>
     </nav>
     
