--- a/form.html
+++ b/form.html
@@ -1,53 +1,114 @@
+<!DOCTYPE html>
 <html>
-<head bgcolor="green">
-<title>申请表</title>
+<head>
+    <title>申请表</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #f4f4f9;
+            margin: 0;
+            padding: 0;
+        }
 
+        nav {
+            background-color: #333;
+            color: white;
+            padding: 15px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
 
+        nav ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+        }
 
+        nav ul li {
+            margin: 0 15px;
+        }
+
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+
+        nav ul li a:hover {
+            color: #ffc107;
+        }
+
+       .main-content {
+            max-width: 600px;
+            margin: 30px auto;
+            background-color: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        h1 {
+            color: #333;
+            margin-bottom: 20px;
+        }
+
+        hr {
+            border: 2px solid #ffc107;
+            margin-bottom: 20px;
+        }
+
+        label {
+            display: block;
+            margin-bottom: 5px;
+            font-weight: 600;
+        }
+
+        input[type="text"],
+        textarea {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 15px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+
+        input[type="checkbox"],
+        input[type="radio"] {
+            margin-right: 5px;
+        }
+
+       .checkbox-group,
+       .radio-group {
+            margin-bottom: 15px;
+        }
+
+        select {
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            margin-bottom: 15px;
+        }
+
+        input[type="submit"],
+        input[type="reset"] {
+            padding: 10px 20px;
+            background-color: #ffc107;
+            border: none;
+            border-radius: 4px;
+            color: white;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        input[type="submit"]:hover,
+        input[type="reset"]:hover {
+            background-color: #e0a800;
+        }
+    </style>
 </head>
-<style>
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-}
-
-nav {
-    background-color: #333;
-    color: white;
-    padding: 10px;
-}
-
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-}
-
-nav ul li {
-    margin: 0 10px;
-}
-
-nav ul li a {
-    color: white;
-    text-decoration: none;
-}
-
-.profile {
-    text-align: center;
-    padding: 50px;
-}
-
-.profile img {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-}
-</style>
-
-<body bgcolor="pink" align="center">
+<body>
     <nav>
         <ul>
             <li><a href="index.html">主页</a></li>
@@ -57,26 +118,35 @@ nav ul li a {
             <li><a href="javascript.html">JavaScript 演示</a></li>
         </ul>
     </nav>
-    <h1 align="center">申请表</h1>
-    <hr size="4" color="white">
-    <b>姓名:</b><input type="text" name="yourname" maxlength="10" ><br>
-       <b> 感兴趣的职位</b><br>
-        <input type="checkbox" name="design" >Web设计人员&nbsp;
-        <input type="checkbox" name="command" >Web管理人员&nbsp;
-        <input type="checkbox" name="explore" >Web开发人员<br>
-        <b>其他要求：</b><br>
-        <textarea rows="6" cols="60">包括薪水待遇，工作地点等</textarea><br>
-        <input type="checkbox" >发送确认消息<br>
-        <select name="经验">
+    <div class="main-content">
+        <h1>申请表</h1>
+        <hr>
+        <label for="yourname">姓名:</label>
+        <input type="text" id="yourname" name="yourname" maxlength="10">
+        <div class="checkbox-group">
+            <label>感兴趣的职位</label><br>
+            <input type="checkbox" id="design" name="design">
+            <label for="design">Web设计人员</label>&nbsp;
+            <input type="checkbox" id="command" name="command">
+            <label for="command">Web管理人员</label>&nbsp;
+            <input type="checkbox" id="explore" name="explore">
+            <label for="explore">Web开发人员</label>
+        </div>
+        <label for="other-requirements">其他要求：</label><br>
+        <textarea id="other-requirements" rows="6" cols="60">包括薪水待遇，工作地点等</textarea>
+        <div class="checkbox-group">
+            <input type="checkbox" id="confirmation">
+            <label for="confirmation">发送确认消息</label>
+        </div>
+        <label for="experience">经验</label>
+        <select id="experience" name="experience">
             <option value="yes">有经验</option>
             <option value="no">无经验</option>
         </select>
-        <p align="center"><input type="submit" value="提交" name="B1">&nbsp;&nbsp;<input type="reset" value="重置" name="B2"
-
+        <div style="text-align: center;">
+            <input type="submit" value="提交" name="B1">&nbsp;&nbsp;
+            <input type="reset" value="重置" name="B2">
+        </div>
+    </div>
 </body>
-
-
-
-
-
 </html>
