--- a/table.html
+++ b/table.html
@@ -53,7 +53,7 @@
                 <li><a href="javascript.html">JavaScript 演示</a></li>
             </ul>
         </nav>
-        <table border="1,align=center" >
+        <table border="1" align=center>
             <caption><b>2024~2025年度第二学期 机械科学与工程学院</b></caption>
             <tr><th colspan="13">余文勇 （2004010004） 副教授 课堂课表</tr>
                 <tr><th>课程名称</th>
