--- a/javascript.html
+++ b/javascript.html
@@ -46,7 +46,7 @@
     </style>
 </head>
 
-<body align="center">
+<body >
     <nav>
         <ul>
             <li><a href="index.html">主页</a></li>
@@ -60,7 +60,7 @@
     <button onclick="changeBackgroundColor()">改变背景色</button>
     <button onclick="showCurrentTime()">显示当前时间</button>
     <div id="time-display"></div>
-    <script>
+    <script align="center">
         function showAlert() {
             alert('这是一个弹出对话框！');
         }
